# mac-setup

./: .gitignore  CLAUDE.md  README.md  SPEC.md  pyproject.toml
.claude/: settings.local.json
src/mac_setup/: __init__.py  catalog.py  catalog.yaml  cli.py  config.py  models.py  state.py
src/mac_setup/installers/: __init__.py  base.py  homebrew.py  mas.py  scanner.py
src/mac_setup/presets/: __init__.py  manager.py
src/mac_setup/presets/defaults/: all.yaml  creative.yaml  developer.yaml  minimal.yaml
src/mac_setup/ui/: __init__.py  display.py  progress.py  prompts.py
src/mac_setup/utils/: __init__.py  logging.py  subprocess.py
tests/: __init__.py  conftest.py  test_catalog.py  test_cli.py  test_cli_extended.py  test_config.py  test_installers.py  test_installers_extended.py  test_models.py  test_presets.py  test_state.py  test_ui_display.py  test_ui_progress.py  test_ui_prompts.py  test_utils.py  test_workflows.py
