[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mac-setup"
version = "1.0.0"
description = "Interactive CLI tool for provisioning macOS machines with curated software selections"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Martin" }
]
keywords = ["macos", "setup", "homebrew", "cli", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Installation/Setup",
    "Topic :: Utilities",
]

dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
mac-setup = "mac_setup.cli:app"

[project.urls]
Homepage = "https://github.com/username/mac-setup"
Repository = "https://github.com/username/mac-setup"

[tool.hatch.build.targets.wheel]
packages = ["src/mac_setup"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
